--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,6 +1,8 @@
----
-title: About
-description: About the site
+# About
+<div className="text-xl mt-0 text-slate-700 dark:text-slate-200">
+  About the site
+</div>
+
 ---
 
 Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. Nunc vel risus commodo viverra maecenas accumsan. Libero id faucibus nisl tincidunt eget nullam non nisi est. Varius quam quisque id diam vel quam. Id donec ultrices tincidunt arcu non.
