--- a/content/posts/deploying-next-apps.mdx
+++ b/content/posts/deploying-next-apps.mdx
@@ -1,7 +1,8 @@
----
-title: SOC 2 for Startups
-description: Importance of SOC 2 for startups
-date: "2024-06-02"
+import Image from "next/image";
+
+<h1 className="mb-0">SOC 2 for Startups</h1>
+<h2 className="mt-0">Importance of SOC 2 for startups</h2>
+
 ---
 
 Until now, trying to style an article, document, or blog post with Tailwind has been a tedious task that required a keen eye for typography and a lot of complex custom CSS.
