--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,5 +1,5 @@
 # About
-<div className="text-xl mt-0 text-slate-700 dark:text-slate-200">
+<div className="text-xl mt-0 text-zinc-700 dark:text-zinc-200">
   About the site
 </div>
 
