update about me

--- a/content/drafts/what-is-soc-2.mdx
+++ b/content/drafts/what-is-soc-2.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image";
 
-<h1 className="mb-0">SOC 2 for Startups</h1>
+<h1 className="mb-0">When </h1>
 <h2 className="mt-0">Importance of SOC 2 for startups</h2>
 
 ---
