--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,21 +1,13 @@
-# About
 
----
+Founding Engineer at an AI startup building an enterprise agent platform. Leading platform and security.
 
-Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. Nunc vel risus commodo viverra maecenas accumsan. Libero id faucibus nisl tincidunt eget nullam non nisi est. Varius quam quisque id diam vel quam. Id donec ultrices tincidunt arcu non.
+This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape.
 
-## Consent
+Previously:
+- Engineering at Databricks
+- Engineering at Square
+- Engineering at HubSpot
+- Key contributor to a top 100 cryptocurrency project (by market cap)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat sed cras ornare arcu. Nibh ipsum consequat nisl vel pretium lectus quam id leo. A arcu cursus vitae congue. Amet justo donec enim diam. Vel pharetra vel turpis nunc eget lorem. Gravida quis blandit turpis cursus in. Semper auctor neque vitae tempus. Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Imperdiet nulla malesuada pellentesque elit eget.
 
-Felis donec et odio pellentesque diam volutpat commodo sed.
-
-Tortor consequat id porta nibh. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Scelerisque fermentum dui faucibus in. Tortor posuere ac ut consequat semper viverra.
-
-## Information we collect
-
-Amet justo donec enim diam. In hendrerit gravida rutrum quisque non. Hac habitasse platea dictumst quisque sagittis purus sit.
-
-## How we use your Information
-
-Ut sem nulla pharetra diam sit amet nisl suscipit adipiscing. Consectetur adipiscing elit pellentesque habitant. Ut tristique et egestas quis ipsum suspendisse ultrices gravida.
+Follow me on Twitter for updates: <a href="https://x.com/bxweng" target="_blank" rel="noopener noreferrer">@bxweng</a>
