more images backed up

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -4,10 +4,8 @@ Founding Engineer at an AI startup building an enterprise agent platform. Leadin
 This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape.
 
 Previously:
-- Engineering at Databricks
-- Engineering at Square
-- Engineering at HubSpot
-- Key contributor to a top 100 cryptocurrency project (by market cap)
+- Engineering at Databricks, Block/Cash App, HubSpot
+- Top contributor to a top 100 cryptocurrency project (by market cap)
 
 
 Follow me on Twitter for updates: <a href="https://x.com/bxweng" target="_blank" rel="noopener noreferrer">@bxweng</a>
