--- a/content/posts/what-is-zero-trust.mdx
+++ b/content/posts/what-is-zero-trust.mdx
@@ -35,7 +35,7 @@ Remember, Zero Trust is a journey, not a destination. Start small with your most
 
 ## Innovators in the IT space Simplifying Zero Trust
 
-While implementing Zero Trust for Corporate IT can seem daunting, several innovative companies are making it more accessible. Here are a few noteworthy ones**:**
+While implementing Zero Trust for Corporate IT can seem daunting, several innovative companies are making it more accessible. Here's a couple that we've come across:
 
 1. [Twingate](https://twingate.com/): Offers a modern approach to secure access, replacing traditional VPNs with a more flexible and secure solution aligned with Zero Trust principles.
 2. [dope.security](https://dope.security/): Secure web gateway that works on device, simplifying the adoption of Zero Trust for both large enterprises and growing startups.
