--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -7,5 +7,6 @@ Previously:
 - Engineering at Databricks, Block/Cash App, HubSpot
 - Top contributor to a top 100 cryptocurrency project (by market cap)
 
-
 Follow me on Twitter for updates: <a href="https://x.com/bxweng" target="_blank" rel="noopener noreferrer">@bxweng</a>
+
+To fork this blog template, visit my [GitHub](https://github.com/BrandonWeng/personal-blog).
