--- a/content/posts/what-is-an-agent.mdx
+++ b/content/posts/what-is-an-agent.mdx
@@ -3,13 +3,9 @@
 <h3 className="mt-1 text-sm text-gray-400">August 4, 2024</h3>
 ---
 
-
-We've witnessed a rapid shift from AI copilots to the world of agents.
-
-At their core, agents are systems that can take user input (structured or unstructured), process it through a series of steps, and produce an output. They typically consist of three main components: tasks (user instructions), memory (data storage), and tools (functions they can execute).
+We've witnessed a rapid evolution in AI applications, moving from simple copilots to more sophisticated agent systems. This shift hasn't happened in isolation; it's been driven by advancements in language models and a growing appetite for autonomous AI solutions in the business world.
 
 ## The Current Landscape
-
 Startups are building horizontal platforms to enable business users to create and configure their own agents:
 - [BREVIAN](https://brevian.ai/): No-code AI agent platform automating business processes
 - [ema](https://www.ema.co/): AI-powered digital employees for task automation
@@ -28,6 +24,8 @@ Additionally, companies are developing vertical solutions for specific use cases
 This all sounds promising... if it works.
 
 ## So what is an agent?
+
+At their core, agents are systems that can take user input (structured or unstructured), process it through a series of steps, and produce an output. They typically consist of three main components: tasks (user instructions), memory (data storage), and tools (functions they can execute).
 
 When you break it down, this current structure isn't too different from a traditional backend server.  
 - User requests come in with some input and some context (tasks)
