What is an agent, really?

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,7 +1,9 @@
 
 Founding Engineer at an AI startup building an enterprise agent platform. Leading platform and security.
 
-This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape.
+This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape. 
+
+All opinions are my own.
 
 Previously:
 - Engineering at Databricks, Block/Cash App, HubSpot
