--- a/content/posts/what-is-an-agent.mdx
+++ b/content/posts/what-is-an-agent.mdx
@@ -1,6 +1,9 @@
-<h1 className="mb-0">What is an agent?</h1>
-<h2 className="mt-2 text-lg font-semibold text-gray-600">Tasks, tools, and collaboration?</h2>
-<h3 className="mt-1 text-sm text-gray-400">August 4, 2024</h3>
+
+<header>
+    <h1 className="mb-0">What is an agent?</h1>
+    <h2 className="mt-2 text-lg font-semibold text-gray-600">Tasks, tools, and collaboration?</h2>
+    <h3 className="mt-1 text-sm text-gray-400">August 4, 2024</h3>
+</header>
 ---
 
 We've witnessed a rapid evolution in AI applications, moving from simple copilots to more sophisticated agent systems. This shift hasn't happened in isolation; it's been driven by advancements in language models and a growing appetite for autonomous AI solutions in the business world.
