--- a/content/posts/what-is-an-agent-really.mdx
+++ b/content/posts/what-is-an-agent-really.mdx
@@ -13,7 +13,7 @@ import Image from "next/image";
 </figure>
 
 
-There's still a lot of buzz about "agents" - autonomous AI systems often romanticized as digital employees. But what is an agent, really? Here are some thoughts after self-reflection and discussions with colleagues, from a more engineering perspective, building on my previous blog post, [What is an agent?](https://blog.brandonweng.com/posts/what-is-an-agent).
+There's still a lot of buzz about "agents" - autonomous AI systems often romanticized as digital employees or assistants. But what is an agent in terms of technical implementation? Here are some thoughts after self-reflection and discussions with colleagues, from a more engineering perspective, building on my previous blog post, [What is an agent?](https://blog.brandonweng.com/posts/what-is-an-agent).
 
 ## An Engineering Perspective
 From an engineering standpoint, agents are systems enabled by large models to perform tasks that historically required human intervention or extensive custom logic. What sets them apart are key characteristics including non-deterministic behavior, continuous learning, progressive autonomy, and bounded autonomy. Agent-driven systems can produce varying outputs for the same input, mimicking human-like variability. They adapt and improve based on interactions and feedback, handling increasingly complex tasks with less oversight over time. Despite their capabilities, agent-driven systems should operate within defined parameters to ensure safety and reliability.
