--- a/content/posts/what-is-soc-2.mdx
+++ b/content/posts/what-is-soc-2.mdx
@@ -39,7 +39,7 @@ As a startup handling customer data, understanding the difference between SOC 2 
    - Tests how well your controls actually work in practice over time by asking you for populations and testing a subset of them
    - Required by many enterprise customers.
 
-Startups typically progress from Type 1 to Type 2 as they mature their security practices or based on customer demand.
+You don't actually need to do a Type 1 to get started. You can do a Type 2 right away!
 
 ### Getting Started with SOC 2 Compliance
 
