--- a/content/posts/searching-for-the-right-answer.mdx
+++ b/content/posts/searching-for-the-right-answer.mdx
@@ -27,7 +27,7 @@ When using LLM assistants, I:
 1. **Provide context**: Give few-shot examples to help the AI understand the problem.
 2. **Be specific**: Craft clear, concise queries for better results.
 
-If LLMs aren't help, Google can still be a great tool to find answers or discussions about the problem.
+If LLMs aren't helping, Google can still be a great tool to find answers or discussions about the problem.
 
 ### Step 3: Explore Internal Resources
 
@@ -42,6 +42,7 @@ For package or software-related issues, external communities and documentation c
 
 1. **GitHub Issues**: I look through the open and closed issues in the repository of the package/software I'm dealing with. Often, other users have faced similar problems, and I might find a solution or a workaround.
 2. **Slack/Discord**: Many open-source projects have dedicated Slack or Discord channels where maintainers and community members discuss issues and features.
+3. **Search Engines**: Search engines like Google or Perplexity are invaluable tools for finding answers or discussions about the problem. They can quickly point you to relevant resources, documentation, forums, or blog posts that address your specific issue.
 
 ### It's Okay to Seek Help
 
