--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,13 +1,17 @@
 
 Founding Engineer at an AI startup building an enterprise agent platform. Leading platform and security.
 
-This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape. 
-
-All opinions are my own.
+This blog shares insights from my startup journey, covering AI, enterprise software, platform engineering, and security in the AI landscape.
 
 Previously:
 - Engineering at Databricks, Block/Cash App, HubSpot
 - Top contributor to a top 100 cryptocurrency project (by market cap)
+
+Used to run a bit as well:
+- 3:47 @ Brooklyn Marathon 2022
+
+NYC Half 2023, SF Marathon 2022 + 2021, Napa Valley Half 2022, Toronto Waterfront Half 2022, Golden Gate Half 2021
+
 
 Follow me on Twitter for updates: <a href="https://x.com/bxweng" target="_blank" rel="noopener noreferrer">@bxweng</a>
 
