--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -9,9 +9,7 @@ Previously:
 
 Used to run a bit as well:
 - 3:47 @ Brooklyn Marathon 2022
-
-NYC Half 2023, SF Marathon 2022 + 2021, Napa Valley Half 2022, Toronto Waterfront Half 2022, Golden Gate Half 2021
-
+- NYC Half 2023, SF Marathon 2022 + 2021, Napa Valley Half 2022, Toronto Waterfront Half 2022, Golden Gate Half 2021
 
 Follow me on Twitter for updates: <a href="https://x.com/bxweng" target="_blank" rel="noopener noreferrer">@bxweng</a>
 
